--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Article-one | Subham Pramanik
+            Article-two | Subham Pramanik
         </title>
         <meta name="viewpoint" content="width=device-width, initial-scale=1" />
     </head>
@@ -11,7 +11,7 @@
         </div>
         <hr/>
         <h3>
-            Article One
+            Article two
         </h3>
         <div>
             Sep 5, 2016
@@ -19,16 +19,16 @@
         </div>
         <div>
             <p>
-                This is the content of article one.
+                This is the content of article two.
             </p>
             <p>
-                This is the content of article one.
+                This is the content of article two.
             </p>
             <p>
-                This is the content of article one.
+                This is the content of article two.
             </p>
             <p>
-                This is the content of article one.
+                This is the content of article two.
             </p>
         </div>
     </body>
