--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Subham, and this is my first web app.
+            Hi! I am Subham, now you can go and continue doing yourself. :)
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
