--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,13 @@
         <meta name="viewpoint" content="width=device-width, initial-scale=1" />
         <style>
             .container{
-                max-width:800px;
+                max-width: 800px;
                 margin: 0 auto;
-                color: grey;
+                color: #ce3434;
                 font-family: monospace;
+                padding-top: 60px;
+                padding-left: 80px;
+                padding-right: 80px;
             }
         </style>
     </head>
