--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,17 +4,7 @@
             Article-one | Subham Pramanik
         </title>
         <meta name="viewpoint" content="width=device-width, initial-scale=1" />
-        <style>
-            .container{
-                max-width: 800px;
-                margin: 0 auto;
-                color: #ce3434;
-                font-family: monospace;
-                padding-top: 60px;
-                padding-left: 80px;
-                padding-right: 80px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
