--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,22 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Subham, now you can go and continue doing yourself. :)
+        <div class="container">
+            <div class="center">
+                <img id="madi" src="http://s2.reutersmedia.net/resources/r/?m=02&d=20160530&t=2&i=1139211618&w=644&fh=&fw=&ll=&pl=&sq=&r=LYNXNPEC4S0DF" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>Persoal</h3>
+            <div>Hi! I'm Kingston, a royal gorilla of kingdom gori-gori from East of Africa. :)
+            </div>
+            <h3>Professional</h3>
+            <div>For now I'm just in the process of evolution to be someone like you. ;)
+            </div>
+            <hr/>
+            <div class="footer">
+                
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
