--- a/ui/index.html
+++ b/ui/index.html
@@ -22,6 +22,13 @@
                 This button <button id="counter">Click me!</button> shows the number of hits I get. Till now, <span id="count">0</span> hits.
             </div>
             <hr/>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="submit" value="submit"></input>
+            <ul>
+                <li>name</li>
+                <li>name</li>
+                <li>name</li>
+            </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
