--- a/ui/index.html
+++ b/ui/index.html
@@ -30,7 +30,7 @@
                 <li>name</li>
             </ul>
         </div>
-        <script type="text/javascript" src="main.js">
+        <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
